These are some images for the main slides

--- a/examples/carousel/index.html
+++ b/examples/carousel/index.html
@@ -86,7 +86,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="image/volkswagen van.png" alt="First slide">
+          <img class="first-slide" src="image/quebec.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Road Trip Pals</h1>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img class="third-slide" src="image/yosemite roadtrip.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1> No money for traveling? No problem </h1>
