--- a/examples/carousel/index.html
+++ b/examples/carousel/index.html
@@ -138,7 +138,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="image/cars.jpg" width="140" height="140">
           <h2>Leave the Buses Aside</h2>
           <p>Cars are faster than buses and most importantly, we promote a community by 				inviting you to connect with your fellow passengers and share the 				experience of traveling. 
 			  Share your road trip experience with someone of your community and make money at the same time. </p>
