--- a/examples/carousel/index.html
+++ b/examples/carousel/index.html
@@ -151,7 +151,7 @@
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="image/community-roundtable.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Sharing is Caring</h2>
           <p>Transform the spare seats in your car into money. Find someone to share the travel costs with or even turn this into a business. We take care of the insurance and safety check. You share, we care. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
