--- a/examples/carousel/index.html
+++ b/examples/carousel/index.html
@@ -138,20 +138,20 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="image/volkswagen van.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Leave the Buses Aside</h2>
           <p>Cars are faster than buses and most importantly, we promote a community by 				inviting you to connect with your fellow passengers and share the 				experience of traveling. 
 			  Share your road trip experience with someone of your community and make money at the same time. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="image/volkswagen van.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="image/friends.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Unconditional Love</h2>
           <p> 7 days a week, 24 hours a day, no matter where you are or when you call us, we will always be there to assist you. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="image/sharing is caring.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Sharing is Caring</h2>
           <p>Transform the spare seats in your car into money. Find someone to share the travel costs with or even turn this into a business. We take care of the insurance and safety check. You share, we care. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
