updated version of index.html

--- a/examples/carousel/index.html
+++ b/examples/carousel/index.html
@@ -173,6 +173,8 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
+			<!--video src="image/roadtrip video.mp4" preload=" "></video-->
+			
           <img class="first-slide" src="image/quebec.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
